@@ -21,6 +21,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 #define __JackGlobals__
 
 #include "JackPlatformPlug.h"
+#include "JackSystemDeps.h"
 #include "JackConstants.h"
 
 #ifdef __CLIENTDEBUG__
